feat: Add filter functionality in requests in workspace